--- a/content/resources/res-21hs21-001.md
+++ b/content/resources/res-21hs21-001.md
@@ -4,12 +4,10 @@ description: ''
 file: /courses/res-21h-001-visualizing-the-birth-of-modern-tokyo-spring-2021/65c9085de7b8871448bb9c1d684e29b3_res-21hs21-001.jpg
 file_size: 24061
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
   caption: "Koizumi Kishio's \"Eitai Bridge and Kiyosu Bridge\" from the series 100\
-    \ Views of Great Tokyo in the Sh\u014Dwa Era, wood block print (Source: [Wikimedia](https://commons.wikimedia.org/wiki/File:Eitai_Bridge_and_Kiyosu_Bridge_by_Koizumi_Kishio.jpg)\
-    \ / public domain)."
+    \ Views of Great Tokyo in the Sh\u014Dwa Era, wood block print (Source: {{% resource_link\
+    \ \"19a00fc2-9a79-4100-97f5-7d40e52f3fdd\" \"Wikimedia\" %}} / public domain)."
   credit: ''
   image-alt: A scene of a bridge at night
 learning_resource_types: []
